<resources>
    <string name="app_name">CastWave</string>
    <string name="no_internet_connection">Không có kết nối internet!</string>
    <string name="txt_content_sign_in">Sách nói, thiền định, truyện ngủ và hàng ngàn nội dung khác</string>
    <string name="txt_sign_in">Đăng nhập</string>
    <string name="txt_content_log_in">Nghe không giới hạn chương đầu của tất cả sách nói, và nhiều nội dung khác.</string>
    <string name="txt_or">Hoặc</string>
    <string name="txt_no_account">"Chưa có tài khoản? Đăng ký"</string>
    <string name="txt_sign_up">Đăng ký</string>
    <string name="txt_continue">Tiếp tục</string>
    <string name="txt_open_notification">Bật thông báo</string>
    <string name="txt_later">Để sau</string>
    <string name="txt_content_sign_up">Tạo tài khoản miễn phí và bắt đầu tận hưởng hàng ngàn nội dung thú vị trên CastWave</string>
    <string name="txt_account">"Đã có tài khoản? Đăng nhập"</string>
    <string name="txt_rule">Tôi đã đọc và đồng ý với Điều khoản sử dụng và Chính sách bảo mật của CastWave</string>
    <string name="txt_title">"Bạn chưa có tài khoản. "</string>
    <string name="txt_content_account">Đăng nhập để nghe nội dung trên CastWave nhé</string>
    <string name="txt_login">"Đăng nhập "</string>
    <string name="txt_updating">Đang cập nhật</string>
    <string name="txt_content">CastWave đang biên tập và chuẩn bị nội dung mới nhất dành cho bạn</string>
    <string name="txt_setting_download">Cài đặt dữ liệu và tải xuống</string>
    <string name="txt_qr_code">Quét mã QR</string>
    <string name="txt_vip_card">Mua thẻ CastWave</string>
    <string name="txt_log_out">Đăng xuất</string>
    <string name="txt_log_in_gmail">Tên đăng nhập (gmail)</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_forgot_password">Quên mật khẩu?</string>
    <string name="txt_enter_gmail">Nhập gmail của bạn</string>
    <string name="txt_continue_guest">Tiếp tục với tư cách khách</string>
    <string name="txt_enter_otp">Nhập mã xác nhận</string>
    <string name="txt_content_otp">Hãy nhập mã được gửi đến gmail để CastWave chắc chắn đó là bạn nhé</string>
    <string name="txt_confirm">Xác nhận</string>
    <string name="txt_name_user">Họ và tên</string>
    <string name="txt_enter_password">Đặt mật khẩu</string>
    <string name="txt_confirm_password">Xác nhận mật khẩu</string>
    <string name="txt_change_password">Đổi mật khẩu</string>
    <string name="txt_create_password">Tạo mật khẩu mới</string>
    <string name="txt_content_create_password">Mật khẩu là một chuỗi có 8 ký tự gồm chữ cái, số và ký tự đặc biệt</string>
    <string name="txt_reset_password">Đặt lại mật khẩu</string>
    <string name="txt_password_change">Đã thay đổi mật khẩu!</string>
    <string name="txt_reset_password_success">Mật khẩu của bạn đã được thay đổi thành công</string>
    <string name="txt_book_information">Thông tin sách</string>
    <string name="txt_library">Thư viện</string>
    <string name="txt_pod_course">Podcourse</string>
    <string name="txt_search">Tìm kiếm</string>
    <string name="txt_challenge">Thử thách</string>
    <string name="txt_discover">Khám phá</string>
    <string name="txt_rank_audio_book">Bang xep hang <br /> %s</string>
    <string name="title_line1">Tiêu đề dòng 1</string>
    <string name="title_line2">Tiêu đề dòng 2</string>
    <string name="title_combined">%1$s\n%2$s</string>
    <string name="txt_start_listen">Bắt đầu nghe</string>
    <string name="txt_book_info">Thông tin sách</string>
    <string name="txt_favourite">Yêu thích</string>
    <string name="txt_hint_search">Tim ten sach, tac gia, mentor…</string>
    <string name="txt_no_data">Chưa có nội dung nào</string>
    <string name="txt_listen_now">Nghe ngay</string>
    <string name="txt_watch_content">Xem nội dung</string>
    <string name="txt_download">Tải về máy</string>
    <string name="txt_remove_library">Xóa khỏi thư viện</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_information">Về chúng tôi</string>
    <string name="txt_setting_rule_and_security"><![CDATA[Điều khoản sử dụng & chính sách bảo mật]]></string>
    <string name="txt_setting_rule">Điều khoản sử dụng</string>
    <string name="txt_security">Chính sách bảo mật</string>
    <string name="txt_user_name_password_null">Tên đăng nhập/mật khẩu không được để trống</string>
    <string name="txt_gmail_is_incorrect">Gmail không đúng xin vui lòng kiểm tra lại</string>
    <string name="txt_clause_policy">Bạn vui lòng đọc và đồng ý với Điều khoản sử dụng và Chính sách bảo mật của CastWave</string>
    <string name="txt_password_donot_match">Mật khẩu không khớp xin vui lòng kiểm tra lại</string>
    <string name="txt_content_forgot_password">"Đừng lo lắng! Vui lòng gửi cho CastWave địa chỉ email được liên kết với tài khoản của bạn nhé  "</string>
    <string name="txt_receive_code">Nhận mã code</string>
    <string name="txt_password_null">Mật khẩu không được để trống</string>
    <string name="txt_new_account">Đã tạo tài khoản thành công!</string>
    <string name="txt_new_account_success">Tài khoản của bạn đã được tạo thành công</string>
    <string name="txt_reset_otp">"Mã sẽ được gửi sau "</string>
    <string name="txt_resend">Gửi lại</string>
    <string name="txt_code_expired">"Mã sẽ hết hạn sau "</string>
    <string name="txt_setting">"Cài đặt "</string>
    <string name="txt_sub_categories">Danh mục phụ</string>
    <string name="txt_latest">Mới nhất</string>
    <string name="txt_most_popular">Phổ biến nhất</string>
    <string name="txt_oldest">Cũ nhất</string>
    <string name="txt_rate">Đánh giá</string>
    <string name="txt_all_categories">Tất cả danh mục</string>
    <string name="txt_all">Tất cả</string>
    <string name="txt_play_audio">Bắt đầu nghe</string>
    <string name="txt_read">Đọc</string>
    <string name="txt_author">Draco Malfoy</string>
    <string name="txt_content_introduction">Giới thiệu nội dung</string>
    <string name="txt_content_introduction_pod_course">Hiểu thêm về mentor</string>
    <string name="txt_see_more">Xem thêm</string>
    <string name="txt_hide_see_more">Hiển thị ít hơn</string>
    <string name="txt_content_evaluate">Nội dung</string>
    <string name="txt_reading_voice">Giọng đọc</string>
    <string name="txt_publishing_information">Thông tin xuất bản</string>
    <string name="txt_comment_evaluate">Để lại đánh giá của bạn</string>
    <string name="txt_contents">Mục lục</string>
    <string name="txt_open_lock_vip_card">Mở khóa tất cả các chương còn lại bằng thẻ CastWave</string>
    <string name="txt_buy_now">Mua ngay</string>
    <string name="txt_new_reviews_book">Đánh giá Sách nói</string>
    <string name="txt_note_when_evaluating">Lưu ý khi đánh giá</string>
    <string name="txt_send_reviews">Gửi đánh giá</string>
    <string name="txt_write_reviews">Viết đánh giá</string>
    <string name="txt_content_note_evaluate">CastWave luôn nỗ lực tạo nên một cộng đồng tích cực, khách quan. Vì vậy những nội dung không phù hợp sẽ tự động được ẩn đi, bao gồm:\n\n 1. Nội dung chứa các từ ngữ kỳ thị hoặc phân biệt đối xử đối với cá nhân hoặc nhóm dựa trên chủng tộc, sắc tộc, giới tính, tôn giáo hoặc các đặc điểm khác.\n\n 2. Nội dung rác hoặc không liên quan, chẳng hạn như quảng cáo.\n\n 3. Nội dung giả mạo hoặc gian lận, ví dụ được đăng tự động hoặc được trả tiền để đăng.\n 4. Nội dung tục tĩu, thiếu văn hóa hoặc chứa ngôn từ phản cảm.\n\n 5. Nội dung không liên quan, không mang tính khách quan, như lỗi ứng dụng, giá tiền hoặc dịch vụ khách hàng.\n</string>
    <string name="txt_understood">Đã hiểu</string>
    <string name="txt_watch_trailer">Xem trailer</string>
    <string name="txt_no_evaluate">Chưa có đánh giá</string>
    <string name="txt_listening_level">CẤP ĐỘ NGHE</string>
    <string name="txt_heard_now">Số giờ đã nghe</string>
    <string name="txt_purchased_content">Nội dung đã mua</string>
    <string name="txt_individual">Cá nhân</string>
    <string name="txt_name_account">Tên người dùng</string>
    <string name="txt_change">Thay đổi</string>
    <string name="txt_phone_number">Số điện thoại</string>
    <string name="txt_facebook_account">Tài khoản Facebook</string>
    <string name="txt_connect_account_facebook">Kết nối với tài khoản facebook</string>
    <string name="txt_connect_account_google">Kết nối với tài khoản google</string>
    <string name="txt_google_account">Tài khoản Google</string>
    <string name="txt_delete_account">Xóa tài khoản</string>
    <string name="txt_title_challenge"><![CDATA[Nghe & nhận thưởng]]></string>
    <string name="txt_content_challenge">Hoàn thành thử thách để nhận Huy hiệu và quy đổi ra sách nói miễn phí nhé</string>
    <string name="txt_jon_now">Tham gia ngay</string>
    <string name="txt_see_rewards">Xem chi tiết phần thưởng</string>
    <string name="txt_today_mission">NHIỆM VỤ HÔM NAY</string>
    <string name="txt_collapse_chapter">Thu gọn danh sách</string>
    <string name="default_web_client_id">670848202357-oldho1bahnfptp4fnfqucgjrufd881hn.apps.googleusercontent.com</string>
    <string name="txt_cancel">Hủy</string>
    <string name="txt_header_logout">Đăng xuất tài khoản</string>
    <string name="txt_header_finish_app">Rời đi sớm vậy?</string>
    <string name="txt_desc_logout">Bạn có thể đăng nhập lại bất cứ lúc nào trong phần tài khoản người dùng</string>
    <string name="txt_desc_finish_app">Bạn có muốn khám phá thêm về Castwave không?</string>
    <string name="txt_submit_logout">Đăng xuất</string>
    <string name="txt_submit_finish_app">Tiếp tục nghe</string>
    <string name="txt_cancel_finish_app">Rời đi</string>
    <string name="txt_change_user_name">Đổi tên người dùng</string>
    <string name="txt_content_change_user_name">Bạn có thể đổi lại tên bất cứ lúc nào</string>
    <string name="txt_enter_user_name">Nhập tên của bạn</string>
    <string name="txt_save">Lưu</string>
    <string name="txt_old_password">Mật khẩu cũ</string>
    <string name="txt_content_password">Mật khẩu cần có tối thiểu 8 ký tự gồm chữ cái, số và ký tự đặc biệt</string>
    <string name="txt_enter_new_password">Nhập mật khẩu mới</string>
    <string name="txt_confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="txt_change_phone">Đổi số điện thoại</string>
    <string name="txt_content_change_phone">Số điện thoại không được chứa chữ cái và ký tự đặc biệt</string>
    <string name="txt_old_phone_number">Số điện thoại cũ</string>
    <string name="txt_enter_new_phone_number">Số điện thoại mới</string>
    <string name="txt_reenter_new_phone_number">Nhập lại số điện thoại mới</string>
    <string name="txt_content_delete_account">"Việc xóa tài khoản đồng nghĩa với xóa toàn bộ thông tin cá nhân, thời lượng đã nghe, danh hiệu, sách và các nội dung bạn đã mua\n\nBạn sẽ không thể khôi phục dữ liệu trên CastWave sau khi bạn xóa tài khoản "</string>
    <string name="txt_please_enter_old_password">Vui lòng nhập mật khẩu cũ</string>
    <string name="txt_please_enter_password">Vui lòng nhập mật khẩu</string>
    <string name="txt_choose_time">Chọn thời gian phù hợp để thực hành</string>
    <string name="txt_set_timer">Hẹn giờ thiền</string>
    <string name="txt_time">Thời gian</string>
    <string name="txt_total_time">Thời lượng thực hành</string>
    <string name="txt_bell_sound">Tiếng chuông</string>
    <string name="txt_sound_content">Âm thanh bắt đầu và kết thúc</string>
    <string name="txt_background_sound">Âm thanh nền</string>
    <string name="txt_content_background_sound">Âm thanh nền trong lúc thiền</string>
    <string name="txt_start_timer">Bắt đầu</string>
    <string name="txt_no">Không</string>
    <string name="txt_5_minute">5 phút</string>
    <string name="txt_please_infrom">Xin thông báo!</string>
    <string name="txt_notifycation_content">Ở đây có rất nhiều sách mới mỗi ngày. Cấp quyền để không bỏ lỡ những đầu sách hấp dẫn nhé</string>
</resources>