<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_01"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:padding="@dimen/_5dp"
        android:src="@drawable/ic_back_circle" />

    <com.castwave.castwave.customview.TextCastWaveBold
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        tools:text="@string/txt_change_phone" />

    <com.castwave.castwave.customview.TextCastWaveRegular
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/txt_content_change_phone"
        android:textColor="@color/purple_03"
        android:textSize="@dimen/_15sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80dp"
        android:background="@drawable/bg_radius_8dp_purple_01"
        android:backgroundTint="#433C63"
        android:hint="@string/txt_enter_new_phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="@dimen/_20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_04"
        android:textSize="@dimen/_15sp" />

    <com.castwave.castwave.customview.TextCastWaveBold
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:background="@drawable/bg_radius_8dp_purple_01"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        android:text="@string/txt_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp" />

</LinearLayout>